--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="logo/logo-png-2.png" alt="Logo">MyDataAgents
+                <img src="logo/logo-wbg-1.jpg" alt="Logo">MyDataAgents
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
